--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,29 @@
 {
+    "name": "jesuswasrasta/trivia-php",
+    "license": "GPL-3.0",
+    "description": "trivia-php",
+    "require-dev": {
+        "php": "^8",
+        "phpunit/phpunit": "*",
+        "squizlabs/php_codesniffer": "*"
+    },
+    "authors": [
+        {
+            "name": "Ferdinando Santacroce",
+            "email": "ferdinando.santacroce@gmail.com"
+        }
+    ],
+    "minimum-stability": "stable",
+    "config": {
+        "bin-dir": "bin"
+    },
     "autoload": {
         "classmap": [
-            "src/"
-        ]
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^8",
-        "phpmd/phpmd": "2.6.0"
+            "src/",
+            "tests/"
+        ],
+        "psr-4": {
+            "": ["src/", "tests/"]
+        }
     }
 }
